/*
Copyright 2020 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto2";

message Manifest {
  repeated Injectable injectables = 1;
  repeated Component components = 2;
  repeated string merged_crates = 3;
  repeated Module modules = 4;
  repeated ComponentModuleManifest component_module_manifests = 5;
}

message Injectable {
  optional Type type = 1;
  optional string ctor_name = 2;
  repeated Dependency dependencies = 4;
}

message Field {
  optional string name = 1;
  optional Type type = 2;
  optional bool injected = 3;
}

message Component {
  optional Type type = 1;
  repeated Dependency provisions = 2;
  optional Type module_manifest = 3;
}

message ComponentModuleManifest {
  optional Type type = 1;
  repeated Dependency builder_modules = 2;
  repeated Type modules = 3;
}

message Dependency {
  optional string name = 1;
  optional Type type = 2;
}

message Type {
  enum Root {
    UNSPECIFIED = 0;
    GLOBAL = 1;
    CRATE = 2;
    PRIMITIVE = 3;
  }
  optional Root root = 1;
  optional string path = 2;
  optional string crate = 3;
  repeated Type args = 4;
  optional bool trait_object = 5;
  optional bool ref = 6;
  repeated Type scopes = 7;
}

message Module {
  optional Type type = 1;
  repeated Provider providers = 2;
}

message Provider{
  optional string name = 1;
  optional Type type = 2;
  repeated Dependency dependencies = 3;
  optional bool static = 4 [default = true];
  optional bool binds = 5;
}